--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
   <head> 
     <title>my first html</title>
+    <style>
+        h1{
+          color: orange;
+          font-size: 5vw;
+        }
+    </style>
   </head>
   <body>
-    <header>this is the header</header>
+    <header style="font-size: 5em; color: salmon;">this is the header</header>
     <img src="/family.jpg" 
     width="200">
     <br>
@@ -24,7 +30,7 @@
       <button>button</button>
     </form>
     <!-- comment here -->
-    <h1>This is a header more stuff and even more stuff</h1> 
+    <h1>This is a header</h1> 
     <h2>OMG. It's smaller</h2> 
     <p>This is a paragraph</p>
     <div>this is div</div>
